z-index fix

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -58,7 +58,6 @@ h2{
     padding-bottom:30px;
     margin-bottom:0;
     background-color:rgba(0,0,0,0.74);
-    z-index:-999;
     padding-top:10px;
 }
 
@@ -69,7 +68,6 @@ h2{
     min-width:400px;
     padding: 5px 10px 5px 10px;
     margin-bottom:40px;
-    z-index: 0;
    }
    .kakomi-triple1::before,
    .kakomi-triple1::after {
@@ -82,7 +80,6 @@ h2{
     border: 1px solid #ffffff; /*中枠線*/
     bottom: -4px;
     right: -4px;
-    z-index: 1;
    }
    
    .mybox{
@@ -95,7 +92,6 @@ h2{
 	margin: 20px 5px; /* 外側の余白 上下・左右 */
 	padding: 30px 20px 20px 20px; /* 内側の余白 上・右・下・左 */
 	position: relative;
-	z-index: 0;
     color:black;
     margin-left:30px;
     margin-right:30px;
@@ -170,7 +166,6 @@ h2{
     position:absolute;
     right:120px;
     bottom:175px;
-    z-index:-1;
 }
 ul{
     padding:0rem;
